Migrate to Jakarta EE 10, Java 17, Jetty 12